--- a/resume.html
+++ b/resume.html
@@ -34,10 +34,10 @@
           </ul>
           <span class="jobTitle">Systems Administrator</span>
           <ul class="jobDescription">
-            <li>Deployed new installs and upgrades, triaged and fulfilled internal and customer requests <span class="accent">(CentOS, Caucho Resin, Redis, PostgreSQL, Apache)</span></li>
-            <li>Oversaw initial implementation and deployment of Client Connect, Redis, and Resin multi-host platform in testing and production as Saas Operations lead</li>
-            <li>Designed, implemented, and deployed QA testing infrastructure, training QA department for self-reliance on software configuration and deployment <span class="accent">(VMWare)</span></li>
             <li>Ensured reliability of global production systems including incident response and post-mortems; 0 missed or late pages <span class="accent">(Datadog, Nagios, LibreNMS)</span></li>
+            <li>Deployed new installs and upgrades, triaged and fulfilled internal and customer requests <span class="accent">(CentOS, Caucho Resin, Redis, PostgreSQL, Apache)</span></li>
+            <li>Oversaw initial implementation and deployment of Client Connect, Redis, and Resin multi-host platform in testing and production</li>
+            <li>Worked on design, implementation, and deployment of QA testing infrastructure, leading training of QA department for self-reliance on software configuration and deployment <span class="accent">(VMWare)</span></li>
             <li>Reviewed, redeveloped, and formatted wiki documentation on SaaS Operations processes to ease DevOps transition and departmental expansion</li>
           </ul>
         </span>
